trying to avoid overflow

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   }
   #content {
     overflow: hidden;
+    position: absolute;
   }
   body{
 	  background: lightblue;
